# iris_bot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
iris_bot/plugins/: test.py
iris_bot/plugins/consumelog/: __init__.py  description.py  pojo.py
iris_bot/plugins/consumelog/dao/: consumedao.py  daolib.py  output.py  typedao.py  userdao.py
iris_bot/plugins/consumelog/factories/: __init__.py  consumefactory.py  factorylib.py  typefactory.py  userfactory.py
iris_bot/plugins/consumelog/redis/: __init__.py  typeRedis.py  userRedis.py
iris_bot/plugins/consumelog/service/: __init__.py  consumeServer.py  typeServer.py  userserver.py
iris_bot/plugins/consumelog/utils/: mysqlOption.py  utils.py
iris_bot/plugins/dailynotehelper/: README.md  __init__.py
iris_bot/plugins/task/: __init__.py  config.py  description.py  factory.py  mydao.py  myutils.py  pojo.py  redisOption.py  service.py  task_add.py  task_delete.py  task_finish.py  task_select.py
